# BioinformaticsExercises

./: README.md  __init__.py  pyproject.toml  runner.py
Chapter_1/: complement.py  frequent_words.py  pattern_count.py  pattern_match.py
Chapter_2/: count_fuzzy.py  freq_words_with_mismatch.py  fuzzy_matching.py  hamming_distance.py  linear_min.py  ori_finder.py
Chapter_3/: median_string.py  motif_entropy.py  motif_enumeration.py  motifs.txt
Data/: complement.txt  dataset_30277_10.txt  dataset_30277_10_2.txt  dataset_30277_10_3.txt  dataset_30277_10_4.txt  genome.txt  pattern.txt  skew.txt
