[tool.poetry]
name = "stockilate"
version = "0.1.0"
description = ""
authors = ["Josh Lamstein <jdlamstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
yfinance = "0.2.54"
seaborn = "0.13.2"
finviz-platform = {git = "https://github.com/mariostoev/finviz.git"}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"