[tool.poetry]
name = "bioinformaticsexercises"
version = "0.1.0"
description = ""
authors = ["Josh Lamstein <jdlamstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
seaborn = "0.13.2"
tqdm = "^4.67.1"
numpy = "^2.3.4"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"